--- a/smart_nota/pubspec.yaml
+++ b/smart_nota/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.2.2
   file_picker: ^8.0.0
   flutter_dotenv: ^5.1.0
+  excel: ^4.0.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
